# LLaVA

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pylintrc  README copy.md  README.md  app.py  cog.yaml  create_ds__wandb.py  demo_scripts.py  download_data.sh  file_utils.py  finetune.ipynb  finetune_task_lora_DSLLM.sh  format.sh  hostfile.txt  jungmok.txt  model_download.py  notes.md  predict.py  predictLLaVa.py  pyproject.toml  qsub_finetune_DSLLM_1.5-7b.sh  qsub_finetune_DSLLM_1.6-vicuna-7b.sh  qsub_lora_DSLLM_1.5-13b.sh  qsub_lora_DSLLM_1.5-7b.sh  qsub_lora_DSLLM_1.5-7b_10shot.sh  qsub_lora_DSLLM_1.5-7b_5shot.sh  qsub_lora_DSLLM_1.6-34b.sh  qsub_lora_DSLLM_1.6-34b_1.6ft.sh  qsub_lora_DSLLM_1.6-mistral-7b.sh  qsub_lora_DSLLM_1.6-mistral-7b_1.6ft.sh  qsub_lora_DSLLM_1.6-vicuna-13b.sh  qsub_lora_DSLLM_1.6-vicuna-7b.sh  requirements.txt  run_deepspeed_blip_558k.sh  run_deepspeed_cc_595k.sh  run_deepspeed_finetune.sh  run_deepspeed_finetune_lightning.sh  (+17 more)
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  postCreateCommand.sh
.github/: PULL_REQUEST_TEMPLATE.md
data_prep/: LLaVA_InitialJson.py  LLaVA_dataSplit.py
docs/: AscendNPU_Support.md  Customize_Component.md  Data.md  Evaluation.md  Finetune_Custom_Data.md  Intel.md  LLaVA_Bench.md  LLaVA_from_LLaMA2.md  LoRA.md  MODEL_ZOO.md  Release_Notes.md  ScienceQA.md  Windows.md  macOS.md
inference/: bench_distraction.sh  bench_distraction_lora.sh  bench_distraction_lora_10shot.sh  bench_distraction_lora_5shot.sh  bench_emotion.sh  bench_emotion_lora.sh  bench_emotion_lora_10shot.sh  bench_emotion_lora_5shot.sh  bench_fatigue.sh  bench_fatigue_lora.sh  bench_fatigue_lora_10shot.sh  bench_fatigue_lora_5shot.sh
llava/: Pipfile  __init__.py  constants.py  conversation.py  mm_utils.py  requirements.txt  utils.py
llava/serve/: api.py  (+12 more)
scripts/: convert_gqa_for_eval.py  convert_mmbench_for_submission.py  convert_mmvet_for_eval.py  convert_seed_for_submission.py  convert_sqa_to_llava.py  convert_sqa_to_llava_base_prompt.py  convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py  extract_mm_projector.py  finetune.sh  finetune_full_schedule.sh  finetune_lora.sh  finetune_qlora.sh  finetune_sqa.sh  merge_lora_weights.py  pretrain.sh  pretrain_xformers.sh  sqa_eval_batch.sh  sqa_eval_gather.sh  train_dataset.py  train_lightning.sh  train_lightning_mpt.sh  upload_model.py  upload_pypi.sh  zero2.json  zero3.json  zero3_offload.json
train/: count.py  lora_fewshot_json_generate.py  lora_json_generate.py  lora_json_generate_distraction.py  lora_json_generate_emotion.py
train_logs/: finetune_1.5-7b_20240429-004510.o6894343.pbs101  finetune_1.5-7b_20240429-023941.o6895191.pbs101  finetune_1.5-7b_20240429-034025.o6895325.pbs101  finetune_1.6-7b.o6853009  finetune_1.6-7b_20240429-004815.o6894344.pbs101  finetune_1.6-7b_20240429-024220.o6895192.pbs101  finetune_1.6-7b_20240429-034338.o6895326.pbs101  lora_1.5-13b.o6884402  lora_1.5-13b.sh.o6879377  lora_1.5-13b_20240428-054851.o6888025.pbs101  lora_1.5-13b_20240428-164356.o6890113.pbs101  lora_1.5-7b.sh.o6844064  lora_1.5-7b.sh.o6878167  lora_1.5-7b_20240428-054740.o6887990.pbs101  lora_1.5-7b_20240428-105727.o6890004.pbs101  lora_1.5-7b_20240428-110612.o6890055.pbs101  lora_1.5-7b_distraction.sh.o6874512  lora_1.6-13b.o6848398  lora_1.6-13b_20240428-164040.o6890103.pbs101  lora_1.6-13b_20240428-165442.o6892033.pbs101  lora_1.6-34b.sh_20240429-001437.o6894125.pbs101  lora_1.6-34b.sh_20240429-023544.o6895171.pbs101  lora_1.6-7b.o6844062  lora_1.6-7b.o6879398  lora_1.6-mistral-7b.o6848395  lora_1.6-mistral-7b_20240428-135115.o6890085.pbs101  lora_1.6-mistral-7b_20240429-013639.o6895211.pbs101  lora_1.6-mistral-7b_20240429-014101.o6895237.pbs101  lora_1.6-mistral-7b_20240429-015218.o6895264.pbs101  lora_1.6-mistral-7b_20240429-024428.o6895324.pbs101  lora_1.6-mistral-7b_20240429-033609.o6895328.pbs101  (+3 more)
(+220 files in other folders)
